# Metin2-VFS-File-System

./: CMakeLists.txt  LICENSE
3rd/precompiled/: tbb_debug.lib  tbb_static.lib  tbb_static_debug.lib
3rd/tbb/: CMakeLists.txt
VFSArchiver/: CMakeLists.txt
VFSArchiver/src/: main.cpp
VFSCryptLib/: CMakeLists.txt
VFSCryptLib/include/: DataBuffer.h  Exception.h  aes.h  aes256_decrypt.h  aes256_encrypt.h
VFSCryptLib/src/: DataBuffer.cpp  Exception.cpp  aes.cpp  aes256_decrypt.cpp  aes256_encrypt.cpp
VFSLib/: CMakeLists.txt
VFSLib/include/: BasicLog.h  CryptHelper.h  LogHelper.h  VFSArchive.h  VFSFile.h  VFSPack.h  VFSPropertyManager.h  config.h
VFSLib/src/: CryptHelper.cpp  LogHelper.cpp  VFSArchive.cpp  VFSFile.cpp  VFSPack.cpp  VFSPropertyManager.cpp  main.cpp
VFSPropertyGenerator/: CMakeLists.txt
VFSPropertyGenerator/src/: main.cpp
VFSTest/: CMakeLists.txt
VFSTest/src/: main.cpp
